# client

./: .gitignore  Cargo-ci.toml  Cargo.toml  README.md
.github/: Cargo.toml
.github/workflows/: rust.yml
res/data/: blocks.json  textures.json
src/: main.rs  player.rs
src/components/: mod.rs  transform.rs
src/game/: block.rs  chunk.rs  game.rs  main_player.rs  mod.rs  player.rs  texture.rs  world.rs
src/game/chunk/: chunk.rs  chunk_grid.rs  chunk_group.rs  mod.rs
src/game/entity/: mod.rs  player.rs
src/game/generation/: height_map.rs  mod.rs
src/game/main_player/: input_handlers.rs
src/game/models/: block_properties.rs  mod.rs
src/input/: axis.rs  cursor.rs  input_callback.rs  input_handler.rs  input_observer.rs  keyboard.rs  keyboard_bindings.rs  mod.rs  network.rs  network_handler.rs
src/input/axis/: axis.rs  keyboard_axis.rs  mod.rs
src/math/: matrix.rs  mod.rs  noise.rs  quaternion.rs  vector.rs
src/math/matrix/: m4.rs  matrix4.rs
src/network/: mod.rs  network_handler.rs  remote_info.rs
src/ops/: bind.rs  mod.rs
src/render/: chunk_renderer.rs  display.rs  mod.rs  renderer.rs  settings.rs  texture.rs
src/render/camera/: camera.rs  mod.rs  orthographic.rs  perspective.rs  view_matrix.rs
src/render/display/: display.rs  framebuffer.rs  mod.rs
src/render/framebuffer/: framebuffer.rs
src/render/mesh/: chunk_mesh.rs  mesh.rs  mod.rs  player_mesh.rs  texture_quad.rs
src/render/models/: chunk_mesh.rs  cube.rs  mod.rs  model.rs  quad.rs
src/render/post/: effect.rs  identity.rs  mod.rs  pipeline.rs
src/render/post/effects/: fxaa.rs  identity.rs  inverted.rs  mod.rs  static_wave.rs
src/render/renderer/: chunk_renderer.rs  mod.rs  player_renderer.rs  renderer.rs  ui_renderer.rs
src/render/shaders/: mod.rs  program.rs  shader.rs
src/render/texture/: mod.rs  texture.rs  texture_array.rs
src/render/ui/: font.rs  label.rs  mod.rs  rect.rs  view.rs
src/traits/: input_observer.rs  mod.rs
src/utils/: atlas.rs  c.rs  color.rs  direction.rs  identifiable.rs  mod.rs  path.rs  point.rs  traits.rs  watcher.rs
