[package]
name = "Xehoscraft_rs"
version = "0.1.0"
authors = ["Alexandre Frigon <alexandre.frigon.1@gmail.com>"]
description = "A Minecraft clone written in rust"
repository = "https://github.com/afrigon/minecraft.rs"
readme = "README.md"
edition = "2018"

[dependencies]
gl = "0.14.0"
glutin = "0.24.0"
image = "0.23.0"
noise = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.bundle]
name = "Minecraft"
identifier = "app.frigon.minecraft"
version = "0.1.0"
icon = ["icon/128x128.png", "icon/128x128@2x.png"]
resources = ["res"]
copyright = "Copyright (c) Alexandre Frigon 2020. All rights reserved."
category = "Games"
short_description = "A Minecraft clone written in rust"

