[package]
name = "roadrunner"
version = "0.1.0"
authors = ["Alexandre Frigon <alexandre.frigon.1@gmail.com>"]
description = "A Minecraft clone written in rust"
repository = "https://github.com/afrigon/minecraft.rs"
readme = "README.md"
edition = "2018"

[dependencies]
gl = "0.14.0"
glutin = "0.24.0"
image = "0.23.0"
futures = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#math = { git = "https://github.com/roadrunner-craft/math" }
math = { path = "../math" }
#core = { git = "https://github.com/roadrunner-craft/core" }
core = { path = "../core" }


[package.metadata.bundle]
name = "Roadrunner"
identifier = "app.frigon.roadrunner"
version = "0.1.0"
icon = ["icon/*"]
resources = ["res"]
copyright = "Copyright (c) Alexandre Frigon 2020. All rights reserved."
category = "Games"
short_description = "A Minecraft clone written in rust"

[features]
default = []
chunk_loading = []
