[package]
name = "roadrunner"
version = "0.1.0"
authors = ["Alexandre Frigon <alexandre.frigon.1@gmail.com>"]
description = "A Minecraft clone written in rust"
repository = "https://github.com/afrigon/minecraft.rs"
readme = "README.md"
edition = "2018"

[dependencies]
gl = "0.14.0"
glutin = "0.26.0"
image = "0.23.0"
rusttype = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.1"
notify = { version = "5.0.0-pre.2", optional = true }
#math = { git = "https://github.com/roadrunner-craft/math" }
math = { path = "../math" }
#core = { git = "https://github.com/roadrunner-craft/core" }
core = { path = "../core" }


[features]
default = []
watchers = ["notify"]
remote = []


[package.metadata.bundle]
name = "Roadrunner"
identifier = "app.frigon.roadrunner"
version = "0.1.0"
icon = ["icon/*"]
resources = ["res"]
copyright = "Copyright (c) Alexandre Frigon 2020."
category = "Games"
short_description = "A Minecraft clone written in rust"

